--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -163,7 +163,7 @@
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
   <div class="form-group col-md-4">
-      <label for="">1er chrono</label>
+      <label for="">1er</label>
       <select class="form-control" name="one">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -173,7 +173,7 @@
     </div>
     
      <div class="form-group col-md-4">
-      <label for="">2&egrave;me chrono</label>
+      <label for="">2&egrave;me</label>
       <select class="form-control" name="two">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -183,7 +183,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">3&egrave;me chrono</label>
+      <label for="">3&egrave;me</label>
       <select  class="form-control" name="three">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -193,7 +193,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">4&egrave;me chrono</label>
+      <label for="">4&egrave;me</label>
       <select  class="form-control" name="four">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -203,7 +203,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">5&egrave;me chrono</label>
+      <label for="">5&egrave;me</label>
       <select  class="form-control" name="five">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -213,7 +213,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">6&egrave;me chrono</label>
+      <label for="">6&egrave;me</label>
       <select  class="form-control" name="six">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -223,7 +223,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">7&egrave;me chrono</label>
+      <label for="">7&egrave;me</label>
       <select  class="form-control" name="seven">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -233,7 +233,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">8&egrave;me chrono</label>
+      <label for="">8&egrave;me</label>
       <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -243,7 +243,7 @@
     </div>
     
      <div class="form-group col-md-4">
-      <label for="">9&egrave;me chrono</label>
+      <label for="">9&egrave;me</label>
       <select  class="form-control" name="nine">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -279,7 +279,7 @@
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
   <div class="form-group col-md-4">
-      <label for="">1er chrono</label>
+      <label for="">1er</label>
       <select class="form-control" name="one">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -289,7 +289,7 @@
     </div>
     
      <div class="form-group col-md-4">
-      <label for="">2&egrave;me chrono</label>
+      <label for="">2&egrave;me</label>
       <select class="form-control" name="two">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -299,7 +299,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">3&egrave;me chrono</label>
+      <label for="">3&egrave;me</label>
       <select  class="form-control" name="three">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -309,7 +309,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">4&egrave;me chrono</label>
+      <label for="">4&egrave;me</label>
       <select  class="form-control" name="four">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -319,7 +319,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">5&egrave;me chrono</label>
+      <label for="">5&egrave;me</label>
       <select  class="form-control" name="five">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -329,7 +329,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">6&egrave;me chrono</label>
+      <label for="">6&egrave;me</label>
       <select  class="form-control" name="six">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -339,7 +339,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">7&egrave;me chrono</label>
+      <label for="">7&egrave;me</label>
       <select  class="form-control" name="seven">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -349,7 +349,7 @@
     </div>
     
       <div class="form-group col-md-4">
-      <label for="">8&egrave;me chrono</label>
+      <label for="">8&egrave;me</label>
       <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
@@ -359,7 +359,7 @@
     </div>
     
      <div class="form-group col-md-4">
-      <label for="">9&egrave;me chrono</label>
+      <label for="">9&egrave;me</label>
       <select  class="form-control" name="nine">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
