--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -40,29 +40,36 @@
   </div>
 </div>  
 
-<div id="info" class="row">
-<div th:if="${#lists.size(cracklist) gt 0}" class="infodiv" style="border: 3px solid red; width: 220px; padding: 10px; margin-bottom: 5px; background-color: white;">
-<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Cracks du jour R[[${reunionstring}]] (+30pts):</h5>
-  <p th:each="c : ${cracklist}"><strong th:if="${c.numero lt 10}">[[${c.C}]]0[[${c.numero}]] </strong><strong th:if="${c.numero gt 9}">[[${c.C}]][[${c.numero}]] </strong> ([[${c.noteProno}]] pts)</p>
-</div> 
 
-<div th:if="${#lists.size(couples) gt 0}" class="" style="border: 3px solid blue; width: 220px; padding: 10px; margin-bottom: 5px; background-color: white;">
-<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Couplés du jour R[[${reunionstring}]] (+30pts):</h5>
-  <p th:each="c : ${couples}"><strong>[[${c}]]</strong></p>
-</div> 
-</div>  
-
-<div th:if="${#maps.size(taypronos) gt 0}" class="" style="border: 3px solid blue; width: 220px; padding: 10px; margin-bottom: 5px; background-color: white;">
+       
+<!-- <div class="container-fluid"> -->
+	<div class="row">
+			<div class="col-md-4">
+		<div th:if="${#maps.size(taypronos) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
 <h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">TayPronos du jour R[[${reunionstring}]]</h5>
   <p th:each="entry : ${taypronos}"><strong>[[${entry.key}]]) [[${entry.value}]]</strong></p>
 </div> 
-</div>    
-       
-<!-- <div style="text-align: center;" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"> -->
-<!--   <div th:each="r: ${reusofday}" class="btn-group mr-2" role="group" aria-label="First group"> -->
-<!--     <button type="button" th:text="${r}" class="btn btn-secondary"></button> -->
-<!--   </div> -->
-<!-- </div> -->
+		</div>
+		<div class="col-md-4">
+		<div th:if="${#lists.size(cracklist) gt 0}" class="" style="width:100%; border: 3px solid green; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Cracks du jour R[[${reunionstring}]] (+30pts):</h5>
+  <p th:each="c : ${cracklist}"><strong th:if="${c.numero lt 10}">[[${c.C}]]0[[${c.numero}]] </strong><strong th:if="${c.numero gt 9}">[[${c.C}]][[${c.numero}]] </strong> ([[${c.noteProno}]] pts)</p>
+</div> 
+		</div>
+		<div class="col-md-4">
+		<div th:if="${#lists.size(couples) gt 0}" class="" style="width:100%; border: 3px solid black; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Couplés du jour R[[${reunionstring}]] (+30pts):</h5>
+  <p th:each="c : ${couples}"><strong>[[${c}]]</strong></p>
+</div> 
+</div> 
+
+		</div>
+
+<!-- 	</div> -->
+	
+	
+	
+</div>
 
             <div class="container-fluid">
 	<div class="row">
@@ -171,14 +178,14 @@
 
         <div th:if="${onetaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonone">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsone(${onehorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsone(${onehorses}, ${onenumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${onetaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifone">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsone(${onehorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsone(${onehorses}, ${onenumcourse})">...</div>
 		</div>
 		
 		
@@ -288,14 +295,14 @@
 
         <div th:if="${twotaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttontwo">...</div>
-        		<div th:replace="_components :: taypronos-dropdownstwo(${twohorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownstwo(${twohorses}, ${twonumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${twotaypronos eq true}">
                 <div th:replace="_components :: taypronos-modiftwo">...</div>
-		        <div th:replace="_components :: taypronos-dropdownstwo(${twohorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownstwo(${twohorses}, ${twonumcourse})">...</div>
 		</div>
   
   </div>          
@@ -404,14 +411,14 @@
 
         <div th:if="${threetaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonthree">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsthree(${threehorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsthree(${threehorses}, ${threenumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${threetaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifthree">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsthree(${threehorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsthree(${threehorses}, ${threenumcourse})">...</div>
 		</div>
 		
 </div>
@@ -518,14 +525,14 @@
 
         <div th:if="${fourtaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonfour">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsfour(${fourhorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsfour(${fourhorses}, ${fournumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${fourtaypronos eq true}">
                 <div th:replace="_components :: taypronos-modiffour">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsfour(${fourhorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsfour(${fourhorses}, ${fournumcourse})">...</div>
 		</div>
 </div>
   
@@ -634,14 +641,14 @@
 
         <div th:if="${fivetaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonfive">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsfive(${fivehorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsfive(${fivehorses}, ${fivenumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${fivetaypronos eq true}">
                 <div th:replace="_components :: taypronos-modiffive">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsone(${fivehorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsone(${fivehorses}, ${fivenumcourse})">...</div>
 		</div>
 </div>
 
@@ -748,14 +755,14 @@
 
         <div th:if="${sixtaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonsix">...</div>
-        		<div th:replace="_components :: taypronos-dropdownssix(${sixhorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownssix(${sixhorses}, ${sixnumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${sixtaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifsix">...</div>
-		        <div th:replace="_components :: taypronos-dropdownssix(${sixhorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownssix(${sixhorses}, ${sixnumcourse})">...</div>
 		</div>
 </div>
   
@@ -860,14 +867,14 @@
 
         <div th:if="${seventaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonseven">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsseven(${sevenhorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsseven(${sevenhorses}, ${sevennumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${seventaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifseven">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsseven(${sevenhorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsseven(${sevenhorses}, ${sevennumcourse})">...</div>
 		</div>
 </div>
  
@@ -973,14 +980,14 @@
 
         <div th:if="${eighttaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttoneight">...</div>
-        		<div th:replace="_components :: taypronos-dropdownseight(${eighthorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownseight(${eighthorses}, ${eightnumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${eighttaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifeight">...</div>
-		        <div th:replace="_components :: taypronos-dropdownseight(${eighthorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownseight(${eighthorses}, ${eightnumcourse})">...</div>
 		</div>
 </div>
 
@@ -1087,14 +1094,14 @@
 
         <div th:if="${ninetaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonnine">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsnine(${ninehorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsnine(${ninehorses}, ${ninenumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${ninetaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifnine">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsnine(${ninehorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsnine(${ninehorses}, ${ninenumcourse})">...</div>
 		</div>
 </div>
 
@@ -1201,14 +1208,14 @@
 
         <div th:if="${tentaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttonten">...</div>
-        		<div th:replace="_components :: taypronos-dropdownsten(${tenhorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownsten(${tenhorses}, ${tennumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${tentaypronos eq true}">
                 <div th:replace="_components :: taypronos-modiften">...</div>
-		        <div th:replace="_components :: taypronos-dropdownsten(${tenhorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownsten(${tenhorses}, ${tennumcourse})">...</div>
 		</div>
 </div>
  
@@ -1315,14 +1322,14 @@
 
         <div th:if="${eleventaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttoneleven">...</div>
-        		<div th:replace="_components :: taypronos-dropdownseleven(${elevenhorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownseleven(${elevenhorses}, ${elevennumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${eleventaypronos eq true}">
                 <div th:replace="_components :: taypronos-modifeleven">...</div>
-		        <div th:replace="_components :: taypronos-dropdownseleven(${elevenhorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownseleven(${elevenhorses}, ${elevennumcourse})">...</div>
 		</div>
 </div>
 
@@ -1429,14 +1436,14 @@
 
         <div th:if="${twelvetaypronos eq false}">
         		<div th:replace="_components :: taypronos-buttontwelve">...</div>
-        		<div th:replace="_components :: taypronos-dropdownstwelve(${twelvehorses})">...</div>
+        		<div th:replace="_components :: taypronos-dropdownstwelve(${twelvehorses}, ${twelvenumcourse})">...</div>
         </div>
 <!--          <div th:if="${onechronos eq true}"> -->
 <!--         		<div th:replace="_components :: chronos-modif">...</div> -->
 <!--         </div> -->
         <div th:if="${twelvetaypronos eq true}">
                 <div th:replace="_components :: taypronos-modiftwelve">...</div>
-		        <div th:replace="_components :: taypronos-dropdownstwelve(${twelvehorses})">...</div>
+		        <div th:replace="_components :: taypronos-dropdownstwelve(${twelvehorses}, ${twelvenumcourse})">...</div>
 		</div>
 </div>
 
