--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -451,10 +451,10 @@
 			    <h4><span th:text="${fourtitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
 				<div class="col-md-11 divrace">
 
-                <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 4 and fourrunners lt 8}"><img th:src="@{img/minisuper4.png}" style="height: 35px;"> </div>
-                <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 7 and fourrunners lt 10}"><img th:src="@{img/super4.png}" style="height: 35px;"> </div>
-                <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners lt 14}"><img th:src="@{img/miniquinte.png}" style="height: 35px;"> </div>
-                <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners gt 13}"><img th:src="@{img/quinte.png}" style="height: 35px;"> </div>
+<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 4 and fourrunners lt 8}"><img th:src="@{img/minisuper4.png}" style="height: 35px;"> </div> -->
+<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 7 and fourrunners lt 10}"><img th:src="@{img/super4.png}" style="height: 35px;"> </div> -->
+<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners lt 14}"><img th:src="@{img/miniquinte.png}" style="height: 35px;"> </div> -->
+<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners gt 13}"><img th:src="@{img/quinte.png}" style="height: 35px;"> </div> -->
 
                           <table id="tab4" class="table-sm table-striped table-responsive">
                           
