--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -77,27 +77,15 @@
 		<div class="col-md-12">		
 		
 <!-- 		FIRST -->
-			<div th:if="${oneexists}" class="row" style="margin-bottom: 10px;">
+			<div th:if="${oneexists}" class="row" style="margin-bottom: 10px; margin-top: 20px">
 <!-- 			    <p th:text="${onetitle}" style="font-weight: bold;"></p> -->
 			    <h4><span th:text="${onetitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
 			    
-				<div class="col-md-11 divrace">
+				<div class="col-md-11">
 
+               <div th:replace="_components :: bettypes(${onerunners}, ${oneistqq}, ${oneispick5})">...</div>
 
-<!--                 <div style="margin-bottom: 5px;" th:if="${onerunners gt 4 and onerunners lt 8}"><img th:src="@{img/minisuper4.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${onerunners gt 7 and onerunners lt 10}"><img th:src="@{img/super4.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${oneistqq and onerunners lt 14}"><img th:src="@{img/miniquinte.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${oneistqq and onerunners gt 13}"><img th:src="@{img/quinte.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${oneispick5 and onerunners lt 14}"><img th:src="@{img/minipick5.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${oneispick5 and onerunners gt 13}"><img th:src="@{img/pick5.png}" style="height: 35px;"> </div> -->
-<!--                    <div style="margin-bottom: 5px;" th:if="${oneistqq eq false and oneispick5 eq false and onerunners gt 9 and onerunners lt 14}"><img th:src="@{img/minimulti.png}" style="height: 35px;"> </div> -->
-<!--                    <div style="margin-bottom: 5px;" th:if="${oneistqq eq false and oneispick5 eq false and onerunners gt 13}"><img th:src="@{img/multi.png}" style="height: 35px;"> </div> -->
-                   
-                
-                
-                
-
-                          <table id="tab1" class="table-sm table-striped table-responsive">
+                          <table id="tab1" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                     
@@ -213,10 +201,12 @@
 <!-- 				SECOND	 -->
 								<div th:if="${twoexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${twotitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
+				<div class="col-md-11 ">
+
+               <div th:replace="_components :: bettypes(${tworunners}, ${twoistqq}, ${twoispick5})">...</div>
 
           
-                          <table id="tab2" class="table-sm table-striped table-responsive">
+                          <table id="tab2" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                     
@@ -333,9 +323,12 @@
 <!-- 					THIRD -->
 								<div th:if="${threeexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${threetitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab3" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+
+               <div th:replace="_components :: bettypes(${threerunners}, ${threeistqq}, ${threeispick5})">...</div>
+
+
+                          <table id="tab3" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                     
@@ -449,14 +442,11 @@
 
 			<div th:if="${fourexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${fourtitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
+				<div class="col-md-11 ">
 
-<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 4 and fourrunners lt 8}"><img th:src="@{img/minisuper4.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq eq false and fourrunners gt 7 and fourrunners lt 10}"><img th:src="@{img/super4.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners lt 14}"><img th:src="@{img/miniquinte.png}" style="height: 35px;"> </div> -->
-<!--                 <div style="margin-bottom: 5px;" th:if="${fouristqq and fourrunners gt 13}"><img th:src="@{img/quinte.png}" style="height: 35px;"> </div> -->
+               <div th:replace="_components :: bettypes(${fourrunners}, ${fouristqq}, ${fourispick5})">...</div>
 
-                          <table id="tab4" class="table-sm table-striped table-responsive">
+                          <table id="tab4" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                      
@@ -570,9 +560,12 @@
 <!-- 		FIFTH -->
 			<div th:if="${fiveexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${fivetitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab5" class="table-sm table-striped table-responsive">
+				<div class="col-md-11 ">
+
+               <div th:replace="_components :: bettypes(${fiverunners}, ${fiveistqq}, ${fiveispick5})">...</div>
+
+
+                          <table id="tab5" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                     
@@ -683,9 +676,11 @@
 <!-- 				SIXTH	 -->
 								<div th:if="${sixexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${sixtitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab6" class="table-sm table-striped table-responsive">
+				<div class="col-md-11 ">
+
+               <div th:replace="_components :: bettypes(${sixrunners}, ${sixistqq}, ${sixispick5})">...</div>
+
+                          <table id="tab6" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                     
@@ -796,9 +791,12 @@
 <!-- 					SEVENTH -->
 								<div th:if="${sevenexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${seventitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab7" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+				
+				       <div th:replace="_components :: bettypes(${sevenrunners}, ${sevenistqq}, ${sevenispick5})">...</div>
+				
+
+                          <table id="tab7" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>       
                      
@@ -909,9 +907,11 @@
 
 			<div th:if="${eightexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${eighttitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab8" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+
+               <div th:replace="_components :: bettypes(${eightrunners}, ${eightistqq}, ${eightispick5})">...</div>
+
+                          <table id="tab8" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                     
@@ -1023,9 +1023,11 @@
 
 			<div th:if="${nineexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${ninetitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab9" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+
+               <div th:replace="_components :: bettypes(${ninerunners}, ${nineistqq}, ${nineispick5})">...</div>
+
+                          <table id="tab9" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                      
@@ -1136,9 +1138,11 @@
 
 			<div th:if="${tenexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${tentitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab10" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+
+               <div th:replace="_components :: bettypes(${tenrunners}, ${tenistqq}, ${tenispick5})">...</div>
+
+                          <table id="tab10" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                     
@@ -1250,9 +1254,11 @@
 
 			<div th:if="${elevenexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${eleventitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
-<!-- 				              <table class="" th:if="${status}"> -->
-                          <table id="tab11" class="table-sm table-striped table-responsive">
+				<div class="col-md-11">
+
+               <div th:replace="_components :: bettypes(${elevenrunners}, ${elevenistqq}, ${elevenispick5})">...</div>
+
+                          <table id="tab11" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                      
@@ -1364,9 +1370,11 @@
 
 			<div th:if="${twelveexists}" class="row" style="margin-bottom: 10px;">
 			    <h4><span th:text="${twelvetitle}" class="badge badge-info" style="margin-right: 6px;"></span></h4>
-				<div class="col-md-11 divrace">
+				<div class="col-md-11">
 
-                          <table id="tab12" class="table-sm table-striped table-responsive">
+               <div th:replace="_components :: bettypes(${twelverunners}, ${twelveistqq}, ${twelveispick5})">...</div>
+
+                          <table id="tab12" class="table-sm table-striped table-responsive divrace">
                           
                 <thead>   
                     
